syntax = "proto3";

package parse_vagrantfile_proto;

option go_package = "vagrant-ruby/go_parse_vagrantfile_ex";

message FileProvisioner {
  string source = 1;
  string destination = 2;
}
